// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Updates/> should display spinner 1`] = `
<div>
  <h1>
    Updates
  </h1>
  <p>
    In Turris OS, you decide when and how to get the latest updates
                    to keep your device running smoothly and securely.
  </p>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;

exports[`<Updates/> should display spinner while check is pending 1`] = `
<div>
  <h1>
    Updates
  </h1>
  <p>
    In Turris OS, you decide when and how to get the latest updates
                    to keep your device running smoothly and securely.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Updates Check
    </h2>
    <p>
      Manually check for updates and install them immediately.
    </p>
    <div
      class="text-right"
    >
      <button
        class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
        disabled=""
        type="button"
      >
        <span
          aria-hidden="true"
          class="spinner-border spinner-border-sm"
          role="status"
        />
         
        Check and install updates
      </button>
    </div>
  </div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Available Updates
    </h2>
    <p>
      Here you can find and approve available updates for 
                    Turris OS and other components.
    </p>
    <div
      class="spinner-wrapper text-center"
    >
      <div
        class="spinner-border"
        role="status"
      >
        <span
          class="sr-only"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Updates/> should display spinner while check is pending 2`] = `
<div>
  <h1>
    Updates
  </h1>
  <p>
    In Turris OS, you decide when and how to get the latest updates
                    to keep your device running smoothly and securely.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Updates Check
    </h2>
    <p>
      Manually check for updates and install them immediately.
    </p>
    <div
      class="text-right"
    >
      <button
        class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
        disabled=""
        type="button"
      >
        <span
          aria-hidden="true"
          class="spinner-border spinner-border-sm"
          role="status"
        />
         
        Check and install updates
      </button>
    </div>
  </div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Available Updates
    </h2>
    <p>
      Here you can find and approve available updates for 
                    Turris OS and other components.
    </p>
    <div
      class="spinner-wrapper text-center"
    >
      <div
        class="spinner-border"
        role="status"
      >
        <span
          class="sr-only"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Updates/> should handle approvable updates 1`] = `
<div>
  <h1>
    Updates
  </h1>
  <p>
    In Turris OS, you decide when and how to get the latest updates
                    to keep your device running smoothly and securely.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Updates Check
    </h2>
    <p>
      Manually check for updates and review them immediately.
    </p>
    <div
      class="text-right"
    >
      <button
        class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
        type="button"
      >
        Check updates
      </button>
    </div>
  </div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Available Updates
    </h2>
    <p>
      Here you can find and approve available updates for 
                    Turris OS and other components.
    </p>
    <h3>
      Approve Update From %s
    </h3>
    <p>
      There is %d package to be updated. See 
      <a
        aria-controls="plan-wrapper"
        aria-expanded="false"
        data-toggle="collapse"
        href="#plan-wrapper"
        role="button"
      >
        details
      </a>
    </p>
    <div
      class="collapse"
      data-testid="plan-wrapper"
      id="plan-wrapper"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-hover"
        >
          <thead
            class="thead-light"
          >
            <tr>
              <th
                scope="col"
              >
                Action
              </th>
              <th
                scope="col"
              >
                Name
              </th>
              <th
                scope="col"
              >
                Current
              </th>
              <th
                scope="col"
              >
                New
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                install
              </td>
              <td>
                PACKAGE
              </td>
              <td>
                1.0
              </td>
              <td>
                2.0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="text-right"
    >
      <button
        class="btn btn-primary col-sm-12 col-md-3 col-lg-2"
        type="button"
      >
        Install now
      </button>
    </div>
  </div>
</div>
`;

exports[`<Updates/> should handle automatic updates (no delays/approvals) 1`] = `
<div>
  <h1>
    Updates
  </h1>
  <p>
    In Turris OS, you decide when and how to get the latest updates
                    to keep your device running smoothly and securely.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Updates Check
    </h2>
    <p>
      Manually check for updates and install them immediately.
    </p>
    <div
      class="text-right"
    >
      <button
        class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
        type="button"
      >
        Check and install updates
      </button>
    </div>
  </div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Available Updates
    </h2>
    <p>
      Here you can find and approve available updates for 
                    Turris OS and other components.
    </p>
    <p
      class="text-center text-muted"
    >
      You're up to date.
    </p>
  </div>
</div>
`;

exports[`<Updates/> should handle disabled updates 1`] = `
<div>
  <h1>
    Updates
  </h1>
  <p>
    In Turris OS, you decide when and how to get the latest updates
                    to keep your device running smoothly and securely.
  </p>
  <div
    class="alert  alert-warning"
  >
    <span>
      Automatic updates are disabled. Please enable 
            
      <a
        href="/reforis/package-management/update-settings"
      >
        delayed or 
            approval-requiring updates
      </a>
       to review them.
    </span>
  </div>
</div>
`;

exports[`<Updates/> should handle error 1`] = `
<div>
  <h1>
    Updates
  </h1>
  <p>
    In Turris OS, you decide when and how to get the latest updates
                    to keep your device running smoothly and securely.
  </p>
  <p
    class="text-center text-danger"
  >
    An error occurred while fetching data.
  </p>
</div>
`;
